<resources>
    <string name="app_name">Video Album</string>


    <string name="default_configuration">Default (Photo, medium quality)</string>
    <string name="photo_configuration">Photo (Low quality)</string>
    <string name="video_configuration">Video (High quality)</string>
    <string name="video_limited_configuration">Video with limitation (By size, quality auto)</string>
    <string name="universal_configuration">Universal (Able to switch video/photo)</string>
    <string name="using_within_dialog">Using within dialog</string>
    <string name="custom_camera_layout">Custom camera layout</string>
    <string name="square_camera_layout">Square camera layout</string>
    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Video Stream Tutorial</string>

</resources>
