<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="#a8e6a1"
                android:text="Event A"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/noA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:text="No video uploaded"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#a8e6a1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="Event B"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false">

            </android.support.v7.widget.RecyclerView>
            <TextView
                android:id="@+id/noB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:text="No video uploaded"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="#a8e6a1"
                android:text="Event C"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false">

            </android.support.v7.widget.RecyclerView>
            <TextView
                android:id="@+id/noC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:text="No video uploaded"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="#a8e6a1"
                android:text="Event D"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false">

            </android.support.v7.widget.RecyclerView>
            <TextView
                android:id="@+id/noD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:text="No video uploaded"/>
        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>
    <TextView
        android:id="@+id/txt"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="No video uploaded. Please upload video"
        android:layout_height="wrap_content" />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_height="40dp" />
</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="match_parent">

    <Button
        android:visibility="gone"
        android:id="@+id/defaultConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/default_configuration" />

    <Button
        android:visibility="gone"
        android:id="@+id/photoConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/photo_configuration" />

    <Button
        android:visibility="gone"

        android:id="@+id/videoConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/video_configuration" />

    <Button
        android:id="@+id/videoLimitedConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Record video" />

    <Button
        android:visibility="gone"

        android:id="@+id/universalConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/universal_configuration" />

    <Button
        android:visibility="gone"
        android:id="@+id/dialogDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/using_within_dialog" />

    <Button
        android:visibility="gone"
        android:id="@+id/customDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/custom_camera_layout" />

    <Button
        android:visibility="gone"
        android:id="@+id/squareDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/square_camera_layout" />

    <TextView
        android:id="@+id/picture_download_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
       android:textColor="#fff"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/streaming_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Streaming video" />
    <Button
        android:id="@+id/uploaded_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Uploaded video" />
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_upload" />
</android.support.design.widget.CoordinatorLayout>